[gd_scene load_steps=17 format=3 uid="uid://c7tsxmwjuwd41"]

[ext_resource type="Script" path="res://Levels/SkydivingLevel.gd" id="1_m2dhv"]
[ext_resource type="Script" path="res://Skydiver/PlayerSkydiver.gd" id="5_37043"]
[ext_resource type="PackedScene" uid="uid://d1hlig8yrnk2a" path="res://Skydiver/Skydiver_mesh.tscn" id="6_ntr7i"]
[ext_resource type="PackedScene" uid="uid://vtochg4irhio" path="res://Skydiver/parachute.glb" id="7_8p2wn"]
[ext_resource type="Texture2D" uid="uid://qtk77yfmaknw" path="res://Assets/UI/speedometer.png" id="9_it1cn"]
[ext_resource type="Texture2D" uid="uid://bufhyxm73wqho" path="res://Assets/UI/UI-objective-complete.png" id="9_naavn"]
[ext_resource type="Shader" path="res://Effects/SpeedLines.gdshader" id="10_0gt1k"]
[ext_resource type="Theme" uid="uid://b6n1yoly1eyhl" path="res://Theme/MainTheme.tres" id="10_dbu5a"]
[ext_resource type="Texture2D" uid="uid://co4bls0sy8o31" path="res://Assets/UI/MISSION-COMPLETE-8-16-2024.png" id="11_4xynx"]
[ext_resource type="Texture2D" uid="uid://b3oljv8lyncny" path="res://Assets/UI/UI-crashed.png" id="12_v1tdu"]
[ext_resource type="Script" path="res://Effects/TopDownCameraFollow.gd" id="13_rlteu"]
[ext_resource type="PackedScene" uid="uid://byciq4nuwsumf" path="res://Effects/FX_ScreenShake.tscn" id="14_pis3b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tp4jf"]
size = Vector3(0.238892, 0.323914, 0.298157)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_cqglo"]
noise_type = 5
frequency = 0.2
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_d4qar"]
noise = SubResource("FastNoiseLite_cqglo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0h6s6"]
shader = ExtResource("10_0gt1k")
shader_parameter/line_color = Color(1, 1, 1, 0.45098)
shader_parameter/line_count = 1.15
shader_parameter/line_density = 0.224
shader_parameter/line_faloff = 0.567
shader_parameter/mask_size = 0.13
shader_parameter/mask_edge = 0.68
shader_parameter/animation_speed = 15.413
shader_parameter/noise = SubResource("NoiseTexture2D_d4qar")

[node name="SkyDivingLevel" type="Node3D"]
script = ExtResource("1_m2dhv")

[node name="PlayerSkydiver" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.969445, 0.245307, 0, -0.245307, 0.969445, 0, 500, 0)
script = ExtResource("5_37043")

[node name="Skydiver" parent="PlayerSkydiver" instance=ExtResource("6_ntr7i")]
transform = Transform3D(-0.1, 0, 1.50996e-08, 0, 0.1, 0, -1.50996e-08, 0, -0.1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerSkydiver"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00469971, 0.175812, -0.0232239)
shape = SubResource("BoxShape3D_tp4jf")

[node name="ParachuteMesh" parent="PlayerSkydiver" instance=ExtResource("7_8p2wn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.180969, 0)
visible = false

[node name="CameraFollowTarget" type="Node3D" parent="PlayerSkydiver"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 5.96046e-07, 0.0746841, 0.147371)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.003
offset_right = -1.0
offset_bottom = -0.304016

[node name="HUD" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -6.47992
offset_bottom = 5.99994
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -370.0
offset_top = 29.0
offset_right = -38.0
offset_bottom = 106.0
grow_horizontal = 0
texture = ExtResource("9_it1cn")
expand_mode = 1

[node name="TimeLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -121.0
offset_top = 36.0
offset_right = -52.0
offset_bottom = 65.0
grow_horizontal = 0
theme = ExtResource("10_dbu5a")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "0:23"
horizontal_alignment = 1

[node name="AltitudeLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -133.0
offset_top = 74.0
offset_right = -76.0
offset_bottom = 105.0
grow_horizontal = 0
theme = ExtResource("10_dbu5a")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "00434"
horizontal_alignment = 2

[node name="AltitudeUnitLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 79.0
offset_right = -49.0
offset_bottom = 101.0
grow_horizontal = 0
theme = ExtResource("10_dbu5a")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "FT"
horizontal_alignment = 1

[node name="TrainingCompleteOverlay" type="CenterContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TrainingCompleteOverlay"]
layout_mode = 2

[node name="Mission-complete-8-16-2024" type="Sprite2D" parent="UI/TrainingCompleteOverlay/VBoxContainer"]
scale = Vector2(0.614537, 0.614537)
texture = ExtResource("11_4xynx")

[node name="PlayerCrashedOverlay" type="CenterContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PlayerCrashedOverlay"]
layout_mode = 2

[node name="Ui-crashed" type="Sprite2D" parent="UI/PlayerCrashedOverlay/VBoxContainer"]
scale = Vector2(0.438596, 0.438596)
texture = ExtResource("12_v1tdu")

[node name="CheckpointsPassedOverlay" type="CenterContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CheckpointsPassedOverlay"]
layout_mode = 2

[node name="Ui-objective-complete" type="Sprite2D" parent="UI/CheckpointsPassedOverlay/VBoxContainer"]
position = Vector2(89, -33)
scale = Vector2(0.693878, 0.693878)
texture = ExtResource("9_naavn")

[node name="Label2" type="Label" parent="UI/CheckpointsPassedOverlay/VBoxContainer"]
layout_mode = 2
theme = ExtResource("10_dbu5a")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 30
text = "land to complete"
horizontal_alignment = 1
uppercase = true

[node name="SpeedLinesCameraEffect" type="ColorRect" parent="UI"]
material = SubResource("ShaderMaterial_0h6s6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 101, 0)
current = true
script = ExtResource("13_rlteu")
target = NodePath("../PlayerSkydiver")
offset = Vector3(0, 3, 0)

[node name="ScreenShake" parent="Camera3D" instance=ExtResource("14_pis3b")]
